--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="https://github.com/RobSap/">Home</a>
+        <a class="navbar-brand" href="https://robsap.github.io/">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -49,14 +49,18 @@
 
        <div class="row">
       <!-- Portfolio Item Heading -->
-      <h1>Robs Github Pages </h1>
-      <p> Testing. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.
+      <h1>Rob's Github Pages </h1>
+      <p> Hello and welcome to my github pages. I created these pages to highlight and navigate the projects I worked. Some are school projects, and some are done for fun. 
        </div>
       <!-- Portfolio Item Row -->
       <div class="row">
 
         <div class="col-md-8">
-
+            <div class="row">
+                <!-- Topic  Heading -->
+                <h1>Hello world </h1>
+                <p> Go ahead and scroll through some of the fun projects ! Testing. </p>
+            </div>
         
 
 
@@ -189,7 +193,7 @@
     <!-- /.container -->
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-2 bg-dark fixed-bottom">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright © Your Website 2018</p>
       </div>
