--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
         <div class="col-md-8">
             <div class="row">
                 <!-- Topic  Heading -->
-                <h1>Hello world </h1>
+                <span><h1>Hello world </h1>
                 <p> Go ahead and scroll through some of the fun projects ! Testing. </p>
+            </span>
             </div>
         
 
