--- a/Unity_Augmented_Reality_Apps.html
+++ b/Unity_Augmented_Reality_Apps.html
@@ -121,7 +121,7 @@
                   <div class="row">
                       <div class="col-md-10">
                           <button class="prev" onclick="plusDivs(-1)">&#10094;</button>
-                          <img class = "img" src="bootstrap_files/750x500" alt="Place Holder" style="width:100%">
+                          <img class = "img" src="images/no_photo.jpg" alt="Place Holder" style="width:100%">
                               <button class="next" onclick="plusDivs(1)">&#10095;</button>
                               </div>
                   </div>
