--- a/Android_Apps.html
+++ b/Android_Apps.html
@@ -154,7 +154,7 @@
               
               <div class="preview"> <!-- start slide 4 -->
                   
-                  <h3><i>Evolution Tower Defense</i></h3>
+                  <h3><i>GRE Prepper</i></h3>
                   <div class="row">
                       <div class="col-md-10">
                           <button class="prev" onclick="plusDivs(-1)">&#10094;</button>
@@ -185,7 +185,7 @@
                        <li><a href="Operating_Systems.html">Operating Systems</a></li>
                        <li><a href="Android_Apps.html">Android Applications</a></li>
                         <li><a href="Machine_Learning.html">Machine Learning</a></li>
-                        <li><a href="Deep_Learning.hmtl">Deep Learning</a></li>
+                        <li><a href="Deep_Learning.html">Deep Learning</a></li>
                         <li><a href="Group_Projects.html">Group Projects</a></li>
                         <li><a href="Parallel_Programming.html">Parallel Programming</a></li>
                         <li><a href="MediFor.html">MediFor</a></li>
