--- a/resume.html
+++ b/resume.html
@@ -67,7 +67,7 @@
                 <li><a href="Operating_Systems.html">Operating Systems</a></li>
                 <li><a href="Android_Apps.html">Android Applications</a></li>
                 <li><a href="Machine_Learning.html">Machine Learning</a></li>
-                <li><a href="Deep_Learning.hmtl">Deep Learning</a></li>
+                <li><a href="Deep_Learning.html">Deep Learning</a></li>
                 <li><a href="Group_Projects.html">Group Projects</a></li>
                 <li><a href="Parallel_Programming.html">Parallel Programming</a></li>
                 <li><a href="MediFor.html">MediFor</a></li>
