--- a/MediFor.html
+++ b/MediFor.html
@@ -87,9 +87,9 @@
                       </div>
                    </div>
                   <div class="row">
-                  <h4>Description</h4>
+                   <span><h4>Description</h4>
                   
-                      <span><P>Info - The last system I created is on a gitlab that requires access from DARPA. Due to rights issues, nothing is posted as of now.
+                     <P>Info - The last system I created is on a gitlab that requires access from DARPA. Due to rights issues, nothing is posted as of now.
                           </p>
                           <p> I will update this soon</p>
 
