--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
        <div class="row">
       <!-- Portfolio Item Heading -->
       <h1>Rob's Github Pages </h1>
-      <p> Hello and welcome to my github pages. I created these pages to highlight and navigate the projects I have worked. Some are school projects, and some are done for fun.
+      <p> Hello and welcome to my github pages. I created these pages to highlight and navigate the various projects I have worked on over the years. Some are school projects, some work related and most are done for fun. Some projects are set to private due to rights restrictions or due to being an assignment for a school class.
        </div>
       <!-- Portfolio Item Row -->
       <div class="row">
