--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,6 @@
 
 
     <title>Contact</title>
-
-
     <!-- Bootstrap core CSS -->
     <link href="bootstrap_files/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -28,11 +26,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class=" ">
                 <a class="nav-link" href="classes.html">Classes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="interests_skills.html">Interest</a>
+                <a class="nav-link" href="interests_skills.html">Interests</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="resume.html">Resume</a>
@@ -50,7 +48,7 @@
 
        <div class="row">
       <!-- Portfolio Item Heading -->
-      <h1>Robs Github Pages </h1>
+      <h1>Rob's Github Pages </h1>
       <p>  Hello and welcome to my github pages. I created these pages to highlight and navigate the various projects I have worked on over the years. Some are school projects, some work related and most are done for fun. Some projects are set to private due to rights restrictions or due to being an assignment for a school class.
        </div>
       <!-- Portfolio Item Row -->
