--- a/MediFor.html
+++ b/MediFor.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="classes.html">Classes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="interests_skills.html">Interest</a>
+              <a class="nav-link" href="interests_skills.html">Interests</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="resume.html">Resume</a>
