--- a/interests_skills.html
+++ b/interests_skills.html
@@ -26,11 +26,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class=" ">
             <a class="nav-link" href="classes.html">Classes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="interests_skills.html">Interest</a>
+                <a class="nav-link" href="interests_skills.html">Interests</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="resume.html">Resume</a>
