--- a/Android_Apps.html
+++ b/Android_Apps.html
@@ -137,15 +137,13 @@
 
 <!-- card 4 -->
 <div class="card">
-    <h2 class="card-title">GRE Prepper</h2>
-    <img src="images/Project_a.png" alt="Place Holder" style="width:25%;height:25%">
-        
+    <h2 class="card-title">Github Search Query</h2>
+        <img src="images/git_search_2.png" alt="Place Holder" style="width:25%;height:25%">
         <div class="card-body">
             <h3 class="card-title">Description</h3>
-            <p>GRE Prepper:
-            Two modes: 1) Flash cards asking math questions 2) Multiple choice questions. Added menu, can select number of questions in flash cards or in the multiple choice questions.</p>
-            <p>Project Code: No Link at this time.
+            <p>Utilizes Github’s Search API to seek repositories using users keywords. Parses JSON response, displays results with optional hyperlink in recyclerview for a quick scrolling.
             <!-- <a href="#" class="btn btn-primary">Read More &rarr;</a> -->
+            <p>Project Code: <a href="https://github.com/RobSap/Android_Apps/tree/master/gitHubSearch">Github Search Query</a>
         </div>
         <div class="card-footer text-muted">
             Posted on Nov 1, 2018 by Rob
