--- a/Android_Apps.html
+++ b/Android_Apps.html
@@ -138,7 +138,7 @@
 <!-- card 4 -->
 <div class="card">
     <h2 class="card-title">Github Search Query</h2>
-        <img src="images/git_search_2.png" alt="Place Holder" style="width:25%;height:25%">
+        <img src="images/git_search_2.jpg" alt="Place Holder" style="width:25%;height:25%">
         <div class="card-body">
             <h3 class="card-title">Description</h3>
             <p>Utilizes Github’s Search API to seek repositories using users keywords. Parses JSON response, displays results with optional hyperlink in recyclerview for a quick scrolling.
