Group changed to edison

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <<!--div class="container">-->
+      <!--div class="container">-->
         <a class="navbar-brand" href="https://robsap.github.io/">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -99,7 +99,7 @@
                        <li><a href="Android_Apps.html">Android Applications</a></li>
                        <li><a href="Machine_Learning.html">Machine Learning and Deep Learning</a></li>
                        
-                       <li><a href="Group_Projects.html">Group Projects</a></li>
+                       <li><a href="Edison_Projects.html">Edison Projects</a></li>
                        <li><a href="Parallel_Programming.html">Parallel Programming</a></li>
                        <li><a href="MediFor.html">MediFor</a></li>
                        <li><a href="other.html">Other</a></li>
