--- a/Machine_Learning.html
+++ b/Machine_Learning.html
@@ -160,7 +160,7 @@
                        <li><a href="Android_Apps.html">Android Applications</a></li>
                         <li><a href="Machine_Learning.html">Machine Learning and Deep Learning</a></li>
                         
-                        <li><a href="Group_Projects.html">Group Projects</a></li>
+                        <li><a href="Edison_Projects.html">Edison Projects</a></li>
                         <li><a href="Parallel_Programming.html">Parallel Programming</a></li>
                         <li><a href="MediFor.html">MediFor</a></li>
                         <li><a href="other.html">Other</a></li>
