--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,8 @@
                 <h2><b>Contact</b></h2>
             </div>
             <ul>
-                <li>Email: <p>  </p> </li>
-                <li>Other: <p>  </p> </li>
+                <li>Email: <p>  rsapping (at) outlook (dot) com</p> </li>
+                <li>Other: <p>  Email for other Means</p> </li>
                 
 
 
@@ -80,7 +80,7 @@
               <li><a href="Android_Apps.html">Android Applications</a></li>
               <li><a href="Machine_Learning.html">Machine Learning and Deep Learning</a></li>
               
-              <li><a href="Group_Projects.html">Group Projects</a></li>
+              <li><a href="Edison_Projects.html">Edison Projects</a></li>
               <li><a href="Parallel_Programming.html">Parallel Programming</a></li>
               <li><a href="MediFor.html">MediFor</a></li>
               <li><a href="other.html">Other</a></li>
