--- a/interests_skills.html
+++ b/interests_skills.html
@@ -77,9 +77,9 @@
           <ul>
               <li><a href="Unity_Augmented_Reality_Apps.html">Unity Augmented Reality</a></li>
               <li><a href="UnityGamesWebGl.html">Unity Games</a></li>
-              <li><a href="Operating_Systems.html">Operating Systems</a></li>
+               
               <li><a href="Android_Apps.html">Android Applications</a></li>
-              <li><a href="Machine_Learning.html">Machine Learning and Deep Learning</a></li>
+              <li><a href="Machine_Learning.html">Machine Learning </a></li>
               
               <li><a href="Edison_Projects.html">Edison Projects</a></li>
               <li><a href="Parallel_Programming.html">Parallel Programming</a></li>
