--- a/Android_Apps.html
+++ b/Android_Apps.html
@@ -86,7 +86,7 @@
 
 <A NAME="Simple Counter">
 <!-- card 1 -->
-<div class="row"><br><br></div>
+<div class="row"></div>
 <div class="card">
 
         <hr></hr>
@@ -202,9 +202,9 @@
                    <ul>
                        <li><a href="Unity_Augmented_Reality_Apps.html">Unity Augmented Reality</a></li>
                        <li><a href="UnityGamesWebGl.html">Unity Games</a></li>
-                       <li><a href="Operating_Systems.html">Operating Systems</a></li>
+                        
                        <li><a href="Android_Apps.html">Android Applications</a></li>
-                        <li><a href="Machine_Learning.html">Machine Learning and Deep Learning</a></li>
+                        <li><a href="Machine_Learning.html">Machine Learning</a></li>
                       
                         <li><a href="Edison_Projects.html">Edison Projects</a></li>
                         <li><a href="Parallel_Programming.html">Parallel Programming</a></li>
