--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <!-- <div class="container">-->
           <p class="m-0 text-center text-white">
           Original and Modified work Copyright (c) 2018 RobSap and are licensed under the terms of the MIT license.</p>
-      </div>-->
+      </div>
      <!--  <!-- /.container -->
     </footer>
 
