--- a/tutorials/youtube_spam_ham_part2.html
+++ b/tutorials/youtube_spam_ham_part2.html
@@ -48,10 +48,11 @@
     <div class="container">
          <div class="row"></div>
          
-         <div >
-              <!-- Portfolio Item Heading -->
-               <h2 style="text-align: center;">Spam and Ham Detection for Youtube Comments Part 1 of 3 </h2>
-
+         <div>
+         <!-- Portfolio Item Heading -->
+         <h2 style="text-align: center;">
+              Spam and Ham Detection for Youtube Comments Part 1 of 3 </h2>
+  
           </div>
           <!-- Portfolio Item Row -->
           <div class="row">
