--- a/Unity_Augmented_Reality_Apps.html
+++ b/Unity_Augmented_Reality_Apps.html
@@ -77,7 +77,7 @@
             <!-- Topic  Heading -->
             <h1>Unity Based Augmented Reality Applications </h1>
             <p> These projects were created using <a href="https://www.vuforia.com/">Vuforia</a> and  <a href="https://unity3d.com/">Unity</a>.
-             <P> The focus of this project was to use a background image and map a 3d animation to that image. Vuforia takes care of mapping a the background image, and Unity us used for displaying the animation. Then using a phone, you can see the different mappings and character animations.
+             <P> The focus of this project was to use a background image and map a 3d animation to that image. Vuforia takes care of mapping the background image to the environment (3d space) and Unity is us used for displaying the animation. 
         </div>
         <center><h3> Quick Link to Projects</h3></center>
         <span>
