--- a/tutorials/nmnist_keras.html
+++ b/tutorials/nmnist_keras.html
@@ -175,7 +175,7 @@
                        <p>Insert script here
                    </div>
                    </br>
-
+<iframe src="MNIST2.html"></iframe>
 
 
                </div>  <!--end row-->
