--- a/tutorials/MNIST2.html
+++ b/tutorials/MNIST2.html
@@ -13113,18 +13113,29 @@ div#notebook {
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Welcome-to-MNist-Hello-World-Example">Welcome to MNist Hello World Example<a class="anchor-link" href="#Welcome-to-MNist-Hello-World-Example">&#182;</a></h2>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>This is the MNIST (National Institute of Standards and Technology ) data set that comes with Keras.</p>
+<p>It has 10,000 test images and 60,000 training images.</p>
+<p>This data set is sometimes refered to as the hello world of deep learning.</p>
+
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[28]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#This is the MNist (National Institute of Standards and Technology ) data set that comes with Keras</span>
-<span class="c1">#10,000 test images</span>
-<span class="c1">#60,000 training images</span>
-
-<span class="c1">#The hello world of deep learning</span>
-
-<span class="c1">#Import</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#Import</span>
 <span class="kn">from</span> <span class="nn">keras.datasets</span> <span class="k">import</span> <span class="n">mnist</span>
 <span class="kn">from</span> <span class="nn">keras</span> <span class="k">import</span> <span class="n">models</span>
 <span class="kn">from</span> <span class="nn">keras</span> <span class="k">import</span> <span class="n">layers</span>
