--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@
                 <!-- Topic  Heading -->
                 <span>
                     <h1>Directory </h1>
-                    <p> I will be updating each project over time to the new display layout. I will also be adding new projects as I develop them. </p>
                     <li>Newest Added Projects</li>
-                        <ul>
-                            <li>In progress: <a href="https://robsap.github.io/projects/MNIST_keras.html">MNIST Keras</a></li>
-                            <li>In progress: <a href="https://robsap.github.io/projects/youtube_spam_ham_part1.html">Youtube Spam Ham Detection</a></li>
+                        <ul> 
+                            <li>New : Quick Evaluation of the MNIST data set that comes with keras. I implement a Neural Network and then a Convolutional Neural Network. Its in a easy to follow tutorial format.</li>
+                             <ul><li> Project Code:  <a href="https://robsap.github.io/projects/MNIST_keras.html">MNIST Keras</a> </ul></li>
+                            <li>In progress: This is the classic Spam Ham Detection problem. I start off using a bag of words model using then move into other varitions, to improve detection.  </li> 
+                            <ul><li>  Project Code: <a href="https://robsap.github.io/projects/youtube_spam_ham_part1.html">Youtube Spam Ham Detection</a><ul></li>
                         </ul>
                     </span>
                 </div>
