--- a/projects/MNIST.html
+++ b/projects/MNIST.html
@@ -13761,6 +13761,14 @@ Lets explore how a CNN performs on the same data.</p>
 </div>
 </div>
 </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Part-2">Part 2<a class="anchor-link" href="#Part-2">&#182;</a></h1><p>Now try using a convlutional neural network in <a href="https://robsap.github.io/projects/MNIST_keras2.html">Part 2</a>.</p>
+
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
