--- a/projects/MNIST2.html
+++ b/projects/MNIST2.html
@@ -13123,7 +13123,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>We will step through the Data Process. Steps 1-4 are explained in part 1 of this project. This is a continuation of part 4. We do briefly describe a difference in the Data Processing step.</p>
+<p>We will step through the Data Process. Steps 1-4 are explained in <a href="https://robsap.github.io/projects/MNIST_keras2.html">Part 1</a> of this project located <a href="https://robsap.github.io/projects/MNIST_keras2.html">here</a>. This is a continuation of part 4. We do briefly describe a difference in the Data Processing step.</p>
 <p>Data Procoss Steps</p>
 <ol>
 <li><p>Goal or Hypothesis</p>
