update links for pagerank

--- a/other.html
+++ b/other.html
@@ -174,8 +174,8 @@
             <div class="card-body">
                 <h3 class="card-title">Description</h3>
                 <p class="card-text"><p>  PageRank was a project done in my distributed computing class. Due to this being an assignment, it is on Gitlab in a private directory. Request access to see.</p>
-                <p>User Profile: <a href="https://gitlab.com/RobSap/pagerank">here</a>.
-                <p>Project Code: <a href="https://gitlab.com/RobSap/pagerank">here</a>.
+                <p>Project Code: <a href="https://github.com/RobSap/Parallel_Programming/tree/master/page_rank">here</a>.
+                <p> Note: This project is now listed under the parallel section  <a href="https://github.com/RobSap/Parallel_Programming">here</a>.
                 </p>
                 <!-- <a href="#" class="btn btn-primary">Read More &rarr;</a> -->
             </div>
